--- a/style.css
+++ b/style.css
@@ -77,6 +77,12 @@ body {
     border-color: black;
 
   }
+  #nonphoto{
+    width: 700px;
+    height: 350px;
+    border-color: black;
+
+  }
   #nonprofitphoto {
     width: 700px;
     height: 350px;
@@ -214,13 +220,12 @@ body {
   
   #linkedinIcon {
     width: 80px;
-    margin-left:70px;
+
     
   }
   #gmailIcon {
     width: 70px;
     margin-left: 10px;
-    margin-right: 10px;
     padding-top: 15px;
    
   }
@@ -234,7 +239,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: row;
-  justify-content: center;
+    justify-content: center;
 
   }
   .footerContactPage {
