--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body {
   #resumee{
     width: 800px;
     padding-top: 80px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+  justify-content: center;
 
 
   align-content: center;
